Update custom.css - fixes htmltag display for Dark Mode.

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -33,6 +33,7 @@
     background-color: #fbff68;
     border-radius: 4px;
     border: 1px solid #222;
+    color:#000;
 }
 
 .discordLink {
